# CAG-example-dependency-checker

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  dependency-checker.config.json  dependency_checker.py  requirements.txt
docs/: AGENTIC-FLOW.md
examples/minimal-repo/: README.md  package.json  pyproject.toml
examples/minimal-repo/app_server/: main.py  pyproject.toml
examples/minimal-repo/app_server/api/: routes.py
examples/minimal-repo/app_server/db/: connection.py  models.py
examples/minimal-repo/app_server/exports/: csv_export.py
examples/minimal-repo/app_server/jobs/: analysis_job.py  backup_job.py  scheduler.py
examples/minimal-repo/app_server/tests/: test_exports.py
examples/minimal-repo/backend/: Gemfile  Rakefile  app.rb  config.ru
examples/minimal-repo/dependency-docs/: javascript.md  python.md  ruby.md
examples/minimal-repo/frontend/: index.html  package.json  vite.config.js
legacy/: README.md
legacy/codeorg-snapshot/: IMPLEMENTATION_SUMMARY.md  LINK_VALIDATION_SUMMARY.md  agent-prompts.md  fix_broken_links.py  link-validation-report-2025-10-23.md  missing_ruby_deps.txt
legacy/codeorg-snapshot/gemfile-dependencies/: README.md  authentication-authorization.md  cloud-services-aws.md  cloud-services-google.md  core-ruby-rails-framework.md  database-caching.md  development-testing.md  frontend-assets.md  monitoring-logging.md  other-utilities.md  ruby-version-compatibility.md  web-server-middleware.md
legacy/codeorg-snapshot/package-json-dependencies/: README.md  blockly-visual-programming.md  build-tools.md  code-editors.md  (+2 more)
(+30 files in other folders)
